--- a/covid19-vis.Rmd
+++ b/covid19-vis.Rmd
@@ -1,12 +1,16 @@
 ---
-title: "COVID-19 Visualizations"
+	title: "COVID-19 Visualizations"
+knit: (function(input_file, encoding) {
+	out_dir <- 'docs';
+	rmarkdown::render(input_file,
+										encoding=encoding,
+										output_file=file.path(dirname(input_file), out_dir, 'index.html'))})
 author: ""
 output:
-  rmarkdown::html_document:
-    theme: cosmo
-    toc: true
-editor_options: 
-  chunk_output_type: console
+	rmarkdown::html_document:
+	theme: cosmo
+toc: true
+date: "Last updated: `r format(Sys.time(), '%d %B, %Y')`"
 ---
 
 
