--- a/covid19-vis.Rmd
+++ b/covid19-vis.Rmd
@@ -76,14 +76,13 @@ active<- inner_join(
 covid<- bind_rows(active,tmp)
 
 
+start_val= 0.000008
 
 
 ```
 
 
-Below is the most important plot. We want to be like S. Korea or lower.  This is a comparison of growth per capita (on a logarithmic scale), where  "day 1" is approx 0.0004% of the country's population.
-In reality, we want to know what percentage of hospital beds have been taken up, and so
-population is just a proxy. The dashed grey lines show epidemic growth when the fraction of infected population doubles every 2 days, or 3 days, etc.
+Below is the most important plot. We want to be like S. Korea or lower.  This is a comparison of growth per capita, where  "day 0" is approx `r format(start_val*100,scientific=F,digits=4)`% of the country's population. This is a log scale, and so exponential/viral growth is a straight line.  The dashed grey lines show epidemic growth when the fraction of infected population doubles every 2 days, or 3 days, etc.  
 ```{r}
 
 
@@ -92,22 +91,24 @@ comparison<- filter(covid,type %in% c('confirmed'))  %>%
 	summarize(val=sum(val)) %>%
 	group_by(region,type) %>%
 	mutate(day=row_number())%>%
-	filter( region%in% c('Italy','US','S.Korea','Spain')) %>%
+	filter( val>-10,region%in% c('Italy','US','S.Korea','Spain')) %>%
 	mutate(pop=ifelse(region=='Italy',  60462000,
 										ifelse(region=='US',  331003000,
 													 ifelse(region=='Spain',47007367	,
 													 ifelse(region=='S.Korea',  51269000)))))
 
-comp.pc<-comparison %>% filter(val/pop>0.00004) %>%
+comp.pc<- comparison %>%  ungroup %>% rowwise %>%
+	mutate(valpc=val/pop, delta=abs(start_val-valpc)) %>%
+	ungroup %>% 
 	group_by(region) %>%
-	mutate(day=row_number()-1,valpc=val/pop)
+	filter(day>=which.min(delta)) %>%
+	mutate(day=row_number()-1)
 
 labels<- comp.pc %>% group_by(region) %>% filter(day==max(day))
 
-
 template<- expand.grid(day=0:25,rate=c(2,3,4,5,10)) %>%
 	as.tbl %>%
-	mutate(region=paste(rate),valpc=0.00004*2**(day/rate))
+	mutate(region=paste(rate),valpc=start_val*2**(day/rate))
 
 gr.labels=tibble(text=c('every\n2 days','every\n3 days','every\n4 days',
 												'every\n5 days','every\n10 days'),
@@ -123,9 +124,11 @@ ggplot(comp.pc)+
 	geom_text_repel(data=labels,aes(label=region),color='black',direction='x',seed =0)+
 	scale_y_log10(breaks=filter(template,rate==2)$valpc,label=percent)+
 	scale_x_continuous(breaks=pretty_breaks(10))+
-	coord_cartesian(ylim=c(0.00004,.002))+
-	labs(y='confirmed cases per capita',x='Days since 0.004% of the population infected')
-
+	coord_cartesian(ylim=c(start_val,.002))+
+	labs(y='confirmed cases per capita',
+			 x=paste('Days since', 
+			 				format(start_val*100,scientific=F,digits=4),
+			 				'of the population infected'))
 ```
 
 
