--- a/covid19-vis.Rmd
+++ b/covid19-vis.Rmd
@@ -1,4 +1,3 @@
-# !diagnostics off
 ---
 title: "COVID-19 Visualizations"
 knit: (function(input_file, encoding) {
@@ -105,21 +104,21 @@ comp.pc<- comparison %>%  ungroup %>% rowwise %>%
 
 labels<- comp.pc %>% group_by(region) %>% filter(day==max(day))
 
-template<- expand.grid(day=0:25,rate=c(2,3,4,5,10)) %>%
+template<- expand.grid(day=0:30,rate=c(2,3,4,5,10)) %>%
 	as.tbl %>%
 	mutate(region=paste(rate),valpc=start_val*2**(day/rate))
 
 gr.labels=tibble(text=c('every\n2 days','every\n3 days','every\n4 days',
 												'every\n5 days','every\n10 days'),
-								 x=c(10,16,23,23,15),
-								 y=c(.0018,.0018,.0018,.0007,.0001))
+								 x=c(15,24,32,32,32),
+								 y=c(.0018,.0018,.0018,.0006,.00007))
 
 ggplot(comp.pc)+
 	aes(x=day,y=valpc,group=c(region),color=region)+
 	theme(legend.position = "none")+
-	geom_line()+geom_point(size=.5)+
+	geom_line(size=1)+geom_point(size=1.1)+
 	geom_line(data=template,linetype=2,color='grey')+
-	geom_text(data=gr.labels,aes(label=text,group=NA,x=x,y=y),color='grey')+
+	geom_text(data=gr.labels,aes(label=text,group=NA,x=x,y=y),color='dark grey')+
 	geom_text_repel(data=labels,aes(label=region),color='black',direction='x',seed =0)+
 	scale_y_log10(breaks=filter(template,rate==2)$valpc,label=percent)+
 	scale_x_continuous(breaks=pretty_breaks(10))+
@@ -336,6 +335,61 @@ ggplot(inner_join(ma.demo,tmp,by='demo'))+
 	# theme(axis.text.x = element_text(angle=0,hjust=1))+
 	geom_text(aes(label=val,y=val/pop*.9),color='yellow')+
 	labs(x='age demographic',y='Fraction of that demo\'s population')
+```
+
+```{r counties}
+
+ma.county.pop<-read_csv("region,pop\nMiddlesex,	1614714\nWorcester ,	830839\nSuffolk ,	807252\nEssex ,	790638\nNorfolk ,	705388\nBristol ,	564022	\nPlymouth 	,518132	\nHampden ,	470406\nBarnstable ,	213413\nHampshire ,	161355	\nBerkshire ,	126348	\nFranklin ,	70963	\nDukes ,	17352	\nNantucket 	,11327")
+
+ma.counties<- select(ma.gov, c(date,Barnstable,	Berkshire,	Bristol,'Dukes and Nantucket',	Essex,	Franklin,	Hampden	,Hampshire, Middlesex, Norfolk, Plymouth,Suffolk, Worcester))  %>% 
+	gather(region,val,-date) %>% na.omit() %>%
+	inner_join(ma.county.pop,by='region') %>%
+	filter(val>0) %>%
+	mutate(valpc=val/pop,day=row_number()) 
+
+ggplot(ma.counties)+aes(date,val,group=region,color=region)+
+	scale_y_continuous(label=comma,
+										 breaks=pretty_breaks())+
+	scale_x_date(breaks=pretty_breaks())+
+	geom_point()+geom_line()+
+	labs(y='Count of Confirmed Cases (cumulative)',x="")
+
+start_val=1e-05
+
+ma.counties.f<- ma.counties%>% ungroup %>% rowwise %>%
+	mutate( delta=abs(start_val-valpc)) %>%
+	ungroup %>% 
+	group_by(region) %>% 
+	filter(day>=which.min(delta)-1,valpc>start_val) %>%
+	mutate(day=row_number()-1)
+
+
+template<- expand.grid(day=0:18,rate=c(2,3,4,5,10)) %>%
+	as.tbl %>%
+	mutate(region=paste(rate),valpc=start_val*2**(day/rate))
+
+gr.labels<- template %>%group_by(region) %>%
+	filter(day==max(day)-1) %>% mutate(text=paste('every',rate,'\ndays'))
+	
+
+ggplot(ma.counties.f)+
+	aes(x=day,y=valpc,group=c(region),color=region)+
+	theme(legend.position = "none")+
+	geom_line(size=1)+geom_point(size=1.1)+
+	geom_line(data=template,linetype=2,color='grey')+
+	geom_text(data=gr.labels,aes(label=text,group=NA),color='dark grey')+
+	# geom_text_repel(data=labels,aes(label=var),color='black',direction='x',seed =0)+
+	scale_y_log10(breaks=filter(template,rate==2)$valpc,label=percent)+
+	scale_x_continuous(breaks=pretty_breaks(10))+
+	# coord_cartesian(ylim=c(start_val,.01))+
+	labs(y='confirmed cases per capita',
+			 color="",
+			 x=paste('Days since', 
+			 				format(start_val*100,scientific=F,digits=4),
+			 				'of the population infected'))+
+	theme(legend.position = 'top')
+
+
 ```
 # US Testing Statistics
 
