--- a/covid19-vis.Rmd
+++ b/covid19-vis.Rmd
@@ -193,6 +193,34 @@ ggplot(filter(tmp,region %in% worst)
 ```
 
 
+# World Fatality Rates
+
+Here is a plot of the fatility rate. It's really hard to tell whether this analysis makes sense given the unreliablity of the data overall. FWIW:
+	
+```{r fatality, echo=FALSE}
+rate<-  	inner_join(confirmed %>% filter(date==max(date)) %>%  group_by(region) %>% summarize(confirmed=sum(val)),
+										deaths %>%filter(date==max(date)) %>%  group_by(region) %>% summarize(deaths=sum(val)),
+										by = c("region")) %>%
+	inner_join(recovered %>%filter(date==max(date)) %>%  group_by(region) %>%	summarize(recovered=sum(val)),
+						 by = c("region")) %>%
+	filter(region!='Cruise Ship' ) %>%
+	mutate(region=ifelse(region=='Korea, South',"S.Korea",region)) %>%
+	filter(deaths>0) %>% 
+	mutate(rate=deaths/(deaths+confirmed+recovered)) %>%  ungroup %>% 
+	rowwise %>%
+	mutate(ci=1.96*sqrt(rate*(1-rate)/(deaths+confirmed+recovered))) %>%  ungroup %>% 
+	group_by(region) %>% mutate(min_ci=min(ci)) 
+
+ggplot(rate %>% filter(deaths>15))+
+	aes(reorder(region,desc(rate)),rate)+
+	scale_y_continuous(label=percent,breaks=pretty_breaks(10))+
+	geom_bar(stat='identity')+
+	geom_text(aes(label=deaths,y=.001),color='yellow',hjust=0,angle=90)+
+	labs(x=element_blank(),y="fatality rate")+
+	theme(legend.position="none",
+				axis.text.x = element_text(angle = 90, vjust = .0,hjust=1))
+
+```
 
 # Massachusetts Data 
 
@@ -347,21 +375,24 @@ ma.counties<- select(ma.gov, c(date,Barnstable,	Berkshire,	Bristol,'Dukes and Na
 	filter(val>0) %>%
 	mutate(valpc=val/pop,day=row_number()) 
 
-ggplot(ma.counties)+aes(date,val,group=region,color=region)+
-	scale_y_continuous(label=comma,
-										 breaks=pretty_breaks())+
-	scale_x_date(breaks=pretty_breaks())+
+ggplot(ma.counties)+
+	aes(date,val,group=region,color=reorder(region,desc(val)))+
+	scale_y_log10(label=comma)+
+	scale_x_date(breaks=pretty_breaks(8))+
 	geom_point()+geom_line()+
-	labs(y='Count of Confirmed Cases (cumulative)',x="")
+	        annotation_logticks() +
+	labs(y='Count of Confirmed Cases (cumulative)',
+			 color=element_blank(),
+			 x="")
 
-start_val=1e-05
+start_val=4e-05
 
 ma.counties.f<- ma.counties%>% ungroup %>% rowwise %>%
 	mutate( delta=abs(start_val-valpc)) %>%
 	ungroup %>% 
 	group_by(region) %>% 
 	filter(day>=which.min(delta)-1,valpc>start_val) %>%
-	mutate(day=row_number()-1)
+	mutate(day=row_number()-1,max_valpc=max(day))
 
 
 template<- expand.grid(day=0:18,rate=c(2,3,4,5,10)) %>%
@@ -373,7 +404,7 @@ gr.labels<- template %>%group_by(region) %>%
 	
 
 ggplot(ma.counties.f)+
-	aes(x=day,y=valpc,group=c(region),color=region)+
+	aes(x=day,y=valpc,group=c(region),color=reorder(region,max_valpc))+
 	theme(legend.position = "none")+
 	geom_line(size=1)+geom_point(size=1.1)+
 	geom_line(data=template,linetype=2,color='grey')+
@@ -382,15 +413,16 @@ ggplot(ma.counties.f)+
 	scale_y_log10(breaks=filter(template,rate==2)$valpc,label=percent)+
 	scale_x_continuous(breaks=pretty_breaks(10))+
 	# coord_cartesian(ylim=c(start_val,.01))+
-	labs(y='confirmed cases per capita',
+	labs(y='confirmed cases per capita in county',
 			 color="",
-			 x=paste('Days since', 
+			 x=paste0('Days since ', 
 			 				format(start_val*100,scientific=F,digits=4),
-			 				'of the population infected'))+
+			 				'% of the population infected'))+
 	theme(legend.position = 'top')
 
 
 ```
+
 # US Testing Statistics
 
 Testing in each state. Based on https://covidtracking.com/api/states/daily.csv. Sometimes, health care workers are tested, to be sure they are not infected. That is one explanation for why some states show many negatives. 
